<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ccsecuritysolutions.NewAccount"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
		
        <TextView
            android:id="@+id/hello_newb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_newb"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textSize="20sp" 
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/entered_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/entered_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_email"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/entered_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/emailPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_email_pass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/entered_emailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />
    </LinearLayout>

</FrameLayout>

