<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ccsecuritysolutions.ChangeEmail"
    tools:ignore="MergeRootFrame" >

    <TextView
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/new_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
            android:id="@+id/enter_email_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_again"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/new_email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
            android:id="@+id/enter_email_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_pass"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/newEmailPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>
    
    <TextView
            android:id="@+id/enter_email_pass_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_pass_again"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/newEmailPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save" />

</LinearLayout>
