<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ccsecuritysolutions.ChangePassword"
    tools:ignore="MergeRootFrame" >

    <TextView
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
            android:id="@+id/enter_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
            android:id="@+id/enter_new_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password_again"
            android:textSize="20sp" />
    
    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Password" />

</LinearLayout>
